# Aula09_bootcamp

./: README.md  etl.py  exemplo_00.py  loggin_exemplo_erros.py  pyproject.toml  utils_log.py
